<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="-6dp" android:layout_marginLeft="-3dp" android:layout_marginRight="-3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_layout_a"
        android:orientation="horizontal">
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/red"
            android:textColor="#FFFFFF"
            android:background="#FF0021"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="-8dp"
            android:text="@string/pink"
            android:background="#FF005C"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-8dp"
            android:text="@string/purple"
            android:textColor="#FFFFFF"
            android:background="#B000B1"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-11dp"
        android:orientation="horizontal"
        android:id="@+id/id_layout_b"
        android:layout_below="@+id/id_layout_a">
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/deep_purple"
            android:textColor="#FFFFFF"
            android:background="#7B00B9"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/indigo"
            android:textColor="#FFFFFF"
            android:background="#5223B7"
            android:layout_marginLeft="-8dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/blue"
            android:textColor="#FFFFFF"
            android:background="#287FF8"
            android:layout_marginLeft="-8dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/id_layout_c"
        android:layout_marginTop="-11dp"
        android:layout_below="@+id/id_layout_b">
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/light_blue"
            android:textColor="#FFFFFF"
            android:background="#009AF8"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/cyan"
            android:background="#00BCD6"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="-8dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/teal"
            android:background="#009C88"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="-8dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/id_layout_d"
        android:layout_marginTop="-11dp"
        android:layout_below="@+id/id_layout_c">
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/green"
            android:background="#00BE4D"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/light_green"
            android:background="#6AD342"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="-8dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/lime"
            android:background="#BDED1C"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="-8dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/id_layout_e"
        android:layout_marginTop="-11dp"
        android:layout_below="@+id/id_layout_d">
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/yellow"
            android:background="#F9FB00"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/amber"
            android:background="#FFCA00"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="-8dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/orange"
            android:textColor="#FFFFFF"
            android:background="#FF9900"
            android:layout_marginLeft="-8dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/id_layout_f"
        android:layout_marginTop="-11dp"
        android:layout_below="@+id/id_layout_e">
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/deep_orange"
            android:textColor="#FFFFFF"
            android:background="#FF3E00"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/brown"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="-8dp"
            android:background="#7D5547"
            android:layout_weight="1"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/gray"
            android:background="#9D9D9D"
            android:layout_marginLeft="-8dp"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-11dp"
        android:text="@string/blue_gray"
        android:textColor="#FFFFFF"
        android:background="#5B7B8B"
        android:layout_below="@+id/id_layout_f"
        />
</RelativeLayout>