<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#000000">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="30dp">
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="#ff0000"
            android:text="@string/red"
            android:id="@+id/id_red"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E29313"
            android:text="@string/orange"
            android:id="@+id/id_orange"
            android:layout_below="@+id/id_red"
            android:layout_toRightOf="@+id/id_red"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F3FE3E"
            android:text="@string/yellow"
            android:id="@+id/id_yellow"
            android:layout_below="@+id/id_orange"
            android:layout_toRightOf="@+id/id_orange"
            />
        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="#00FF49"
            android:text="@string/green"
            android:id="@+id/id_green"
            android:layout_below="@+id/id_yellow"
            android:layout_toRightOf="@+id/id_yellow"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#5700F9"
            android:textColor="#FFFFFF"
            android:text="@string/blue"
            android:id="@+id/id_blue"
            android:layout_below="@+id/id_green"
            android:layout_toLeftOf="@+id/id_green"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#5D0080"
            android:textColor="#FFFFFF"
            android:text="@string/indigo"
            android:id="@+id/id_indigo"
            android:layout_below="@+id/id_blue"
            android:layout_toLeftOf="@+id/id_blue"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF4BE9"
            android:text="@string/violet"
            android:id="@+id/id_violet"
            android:layout_below="@+id/id_indigo"
            android:layout_toLeftOf="@+id/id_indigo"
            />
    </RelativeLayout>
</RelativeLayout>